fixed things on mobile

--- a/hackmty-site/src/index.css
+++ b/hackmty-site/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: linear-gradient(to right, #662d91, #946cb2);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
